# wod-like-slg

./: .gitignore  README.md  dev-stop.bat  dev.bat  dev.sh  package.json  pyproject.toml  架构与流程图.md
backend/app/: main.py
backend/app/services/: game_service.py  save_service.py
backend/data/: affixes.json  classes.json  enemies.json  skills.json
backend/data/presets/: README.md
backend/data/presets/wod_default/: classes.json  dungeon_templates.json  enemies.json  equipment.json  preset.json  quests.json  recruits.json  shop.json  skills.json
backend/game_core/: data.py  engine.py
backend/tests/: test_consumable_system.py  test_core_loop.py  test_enchantment_system.py  test_quest_system.py  test_save_service.py  test_shop_system.py
docs/: attributes_and_skills.md  mvp_design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: Bar.tsx  BattleReplay.tsx  CharacterAvatar.tsx  CharacterSheet.tsx  Chips.tsx  DayResults.tsx  EquipmentCard.tsx  EquipmentTooltip.tsx  GuidedTour.tsx  InventoryGrid.tsx  Paperdoll.tsx  SaveManager.tsx  Screens.tsx  SideNav.tsx  Toasts.tsx  TopBar.tsx
frontend/src/components/panels/: DungeonsPanel.tsx  EnchantPanel.tsx  OverviewPanel.tsx  PartyPanel.tsx  PlanPanel.tsx  QuestsPanel.tsx  RecruitsPanel.tsx  ReportsPanel.tsx  (+2 more)
frontend/src/lib/: attributes.ts  format.ts
frontend/src/presets/: wodDefaultPreset.json
frontend/src/state/: useGame.ts
frontend/src/types/: game.ts
